recotrackdata for tracking integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ add_library(test_beam_analysis SHARED
     src/alcor_lightdata.cxx
     src/alcor_recodata.cxx
     src/alcor_spilldata.cxx
+    src/alcor_recotrackdata.cxx
     src/mapping.cxx
     src/alcor_data_streamer.cxx
     src/streaming_framer.cxx
@@ -96,6 +97,7 @@ set(DICT_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/include/alcor_lightdata.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/alcor_recodata.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/alcor_spilldata.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/alcor_recotrackdata.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/mapping.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/alcor_data_streamer.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/streaming_framer.h
