--- a/conf/mapping_conf.2023.toml
+++ b/conf/mapping_conf.2023.toml
@@ -1,81 +1,61 @@
 # mapping_conf.toml
 
 [pdu_xy_position]
-1 = [-82.0, 30.0]
-2 = [-26.0, 35.0]
-3 = [30.0, 30.0]
-4 = [30.0, -26.0]
+6 = [-82.0, 30.0]
+4 = [-26.0, 35.0]
+7 = [30.0, 30.0]
+1 = [30.0, -26.0]
 5 = [30.0, -82.0]
-6 = [-26.0, -87.0]
-7 = [-82.0, -82.0]
-8 = [-82.0, -26.0]
+3 = [-26.0, -87.0]
+8 = [-82.0, -82.0]
+2 = [-82.0, -26.0]
 
 [pdu_rotation]
 1 = true
 2 = true
 3 = true
 4 = true
-5 = true
+5 = false
 6 = true
 7 = true
-8 = true
+8 = false
 
 [device_chip_to_pdu_matrix]
-"192_0" = [1, 1]
-"192_1" = [1, 1]
-"192_2" = [1, 2]
-"192_3" = [1, 2]
-"192_4" = [1, 3]
-"192_5" = [1, 3]
-"192_6" = [1, 4]
-"192_7" = [1, 4]
-"194_0" = [3, 1]
-"194_1" = [3, 1]
-"194_2" = [3, 2]
-"194_3" = [3, 2]
+"195_0" = [1, 3]
+"195_1" = [1, 3]
+"195_2" = [1, 4]
+"195_3" = [1, 4]
+"193_0" = [2, 1]
+"193_1" = [2, 1]
+"193_2" = [2, 2]
+"193_3" = [2, 2]
+"192_0" = [2, 3]
+"192_1" = [2, 3]
+"192_2" = [2, 4]
+"192_3" = [2, 4]
+"192_4" = [3, 1]
+"192_5" = [3, 1]
+"193_4" = [3, 2]
+"193_5" = [3, 2]
 "194_4" = [3, 3]
 "194_5" = [3, 3]
-"194_6" = [3, 4]
-"194_7" = [3, 4]
-"195_0" = [4, 1]
-"195_1" = [4, 1]
-"195_2" = [4, 2]
-"195_3" = [4, 2]
-"195_4" = [4, 3]
-"195_5" = [4, 3]
-"195_6" = [4, 4]
-"195_7" = [4, 4]
-"196_0" = [5, 1]
-"196_1" = [5, 1]
-"196_2" = [5, 2]
-"196_3" = [5, 2]
-"196_4" = [5, 3]
-"196_5" = [5, 3]
-"196_6" = [5, 4]
-"196_7" = [5, 4]
-"197_0" = [6, 1]
-"197_1" = [6, 1]
-"197_2" = [6, 2]
-"197_3" = [6, 2]
-"197_4" = [6, 3]
-"197_5" = [6, 3]
-"197_6" = [6, 4]
-"197_7" = [6, 4]
-"198_0" = [7, 1]
-"198_1" = [7, 1]
-"198_2" = [7, 2]
-"198_3" = [7, 2]
-"198_4" = [7, 3]
-"198_5" = [7, 3]
-"198_6" = [7, 4]
-"198_7" = [7, 4]
-"199_0" = [8, 1]
-"199_1" = [8, 1]
-"199_2" = [8, 2]
-"199_3" = [8, 2]
-"199_4" = [8, 3]
-"199_5" = [8, 3]
-"199_6" = [8, 4]
-"199_7" = [8, 4]
-"200_0" = [99, 1]
-"200_2" = [99, 1]
+"194_1" = [1, 1]
+"194_2" = [1, 2]
+"195_4" = [3, 4]
+"195_5" = [3, 4]
+"196_0" = [4, 1]
+"196_1" = [4, 1]
+"196_2" = [4, 2]
+"196_3" = [4, 2]
+"196_4" = [5, 2]
+"196_5" = [5, 2]
+"197_0" = [4, 3]
+"197_1" = [4, 3]
+"197_2" = [4, 4]
+"197_3" = [4, 4]
+"197_4" = [6, 2]
+"197_5" = [6, 2]
+"198_0" = [7, 4]
+"198_1" = [7, 4]
+"198_2" = [8, 4]
+"198_3" = [8, 4]
